# HW4-Clustering

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cluster/: kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
