[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "seqparser"
authors = [{name = "Omkar Ghenand", email = "omkar.ghenand@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
	"numpy",
	"scipy",
	"matplotlib"
	"scikit-learn"
]

[project.urls]
Home = "https://github.com/oghenand/HW4-Clustering"
